--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./index.js"> </script>
-    <title>Scissors, Paper, Stone - Play with Computer </title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+
+    <title>Scissors, Paper, Stone - Play with Computer</title>
+  </head>
+  <body>
+    <div>
+      <h1 class="heading">Rock Paper Scissors Game</h1>
+      <div class="row">
+        <button class="btn" id="rock">Rock</button>
+        <button class="btn" id="paper">Paper</button>
+        <button class="btn" id="scissors">Scissors</button>
+      </div>
+      <div class="row">
+        <div class="result">You</div>
+        <div class="result">Computer</div>
+      </div>
+      <div class="row">
+        <div class="result" id="player"></div>
+        <div class="result" id="computer"></div>
+      </div>
+      <div class="row">
+        <div id="verdict"></div>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
