Completed UI & game logic

--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
     <div>
       <h1 class="heading">Rock Paper Scissors Game</h1>
       <div class="row">
-        <button class="btn" id="rock">Rock</button>
-        <button class="btn" id="paper">Paper</button>
-        <button class="btn" id="scissors">Scissors</button>
+        <button class="btn" id="rock"><img src="img/rock.jpeg" alt="rock"></img></button>
+        <button class="btn" id="paper"><img src="img/paper.jpeg" alt="paper"></img></button>
+        <button class="btn" id="scissors"><img src="img/scissors.jpeg" alt ="scissors"></img></button>
       </div>
-      <div class="row">
-        <div class="result">You</div>
-        <div class="result">Computer</div>
-      </div>
+     
       <div class="row">
         <div class="result" id="player"></div>
+        <div class="selection" ><img id="userImage" src=""> </img></div>
+        <div class="selection" ><img id="computerImage" src=""> </img></div>
         <div class="result" id="computer"></div>
       </div>
+     
       <div class="row">
         <div id="verdict"></div>
       </div>
+      <div class="play-again"><button id="play-again">Play Again</button></div>
     </div>
     <script src="index.js"></script>
   </body>
